--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -13,20 +13,20 @@
             android:icon="@drawable/ic_categories_foreground"
             android:title="@string/menu_categories" />
 
-        <item
-            android:id="@+id/nav_recipe"
-            android:icon="@drawable/ic_recipe_foreground"
-            android:title="@string/menu_recipe" />
+<!--        <item-->
+<!--            android:id="@+id/nav_recipe"-->
+<!--            android:icon="@drawable/ic_recipe_foreground"-->
+<!--            android:title="@string/menu_recipe" />-->
 
         <item
             android:id="@+id/nav_subscription"
             android:icon="@drawable/ic_subscription_foreground"
             android:title="@string/menu_subscription" />
 
-        <item
-            android:id="@+id/nav_memberships"
-            android:icon="@drawable/ic_membership_foreground"
-            android:title="@string/menu_memberships" />
+<!--        <item-->
+<!--            android:id="@+id/nav_memberships"-->
+<!--            android:icon="@drawable/ic_membership_foreground"-->
+<!--            android:title="@string/menu_memberships" />-->
         <item
             android:id="@+id/nav_how_it_works"
             android:icon="@drawable/ic_how_it_works_foreground"
