--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -49,8 +49,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:textSize="@dimen/recipe_20sp_text_size"
-                    android:fontFamily="sans-serif-condensed-light"
-                    android:textColor="#000"
+                    android:fontFamily="@font/adamina"
                     android:id="@+id/recipe_label"/>
 
                 <TextView
