--- a/app/src/main/res/layout/activity_recipe.xml
+++ b/app/src/main/res/layout/activity_recipe.xml
@@ -8,7 +8,9 @@
     <androidx.appcompat.widget.Toolbar
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
-        android:id="@+id/toolbar">
+        android:id="@+id/toolbar"
+        android:background="?attr/colorPrimary"
+       >
 
         <ImageView
             android:layout_width="wrap_content"
