Implemented the logic to allow or deny access to recipes depending on subscription in HomeViewModel.kt and MainActivity.kt.

--- a/app/src/main/res/layout/subscription_activity.xml
+++ b/app/src/main/res/layout/subscription_activity.xml
@@ -6,8 +6,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".SubscriptionActivity">
-
+    tools:context=".ui.subscription.SubscriptionActivity">
 
     <ListView
         android:id="@+id/listview"
